--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -6,7 +6,9 @@
 </head>
 <body>
 	<h1>Set the Mood</h1>
-	
+	<% if (user) { %>
+  	<h2><%= user.name %></h2>
+	<% } %>
 	<h2><a href ="/auth/spotify">Log in with spotify</a></h2>
 	<h2>Choose your mood</h2>
 	<h4>New Country</h4>
