add input for user to search spotify. Set up post request to server on search

--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -10,6 +10,8 @@
   	<h2>Welcome <%= user.name %> !</h2>
   	<img src=<%= user.photo %>></img>
   	<h2><a href ="/logout">Log out</a></h2>
+  	<input></input>
+  	<button class="search">Search Music</button>
 	<% } %>
 	<% if (user === undefined) { %>
 	<h2><a href ="/auth/spotify">Log in with spotify</a></h2>
