--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -16,17 +16,9 @@
 	<% if (user === undefined) { %>
 	<h2><a href ="/auth/spotify">Log in with spotify</a></h2>
 	<% } %>
-
-	<h2>Choose your mood</h2>
-	<h4>New Country</h4>
-	<h4>Regge</h4>
-	<h4>Rock</h4>
-	<h4>Rnb</h4>
-	<h4>Old Country</h4>
-	<h4>Classical</h4>
-	<h4>Hip Hop</h4>
-	<h4>Indie</h4>
-	<h4>Oldies</h4>
+	<div class="playlists">
+		
+	</div>
 	<script src="main.js"></script>
 </body>
 </html>
