--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link href="../main.css" rel="stylesheet">
 	<title>Set The Mood</title>
 </head>
 <body>
@@ -19,6 +20,7 @@
 	<div class="playlists">
 		
 	</div>
+
 	<script src="main.js"></script>
 </body>
 </html>
