--- a/client/public/views/index.ejs
+++ b/client/public/views/index.ejs
@@ -13,7 +13,7 @@
   	<h2><a href ="/logout">Log out</a></h2>
   	<input></input>
   	<button class="search">Search Playlists</button>
-  	<button>Select one of your playlsits</button>
+  	<button class="personalPlaylist">Select one of your playlsits</button>
   	<iframe src="" width="400" height="300" frameborder="0" allowtransparency="true"></iframe>	
 	<% } %>
 	<% if (user === undefined) { %>
