--- a/client/public/views/landing.ejs
+++ b/client/public/views/landing.ejs
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link href="../main.css" rel="stylesheet">
 	<title>Set the Mood</title>
 </head>
-<body>
-<h1>Set the Mood</h1>
+<body class="landing">
+<h1 class="landingTitle">Set the Mood</h1>
+<hr/>
 <h2><a href ="/auth/spotify">Log in with spotify</a></h2>
 	
 </body>
