--- a/client/public/main.css
+++ b/client/public/main.css
@@ -1,3 +1,19 @@
+/******************************************************************************************* LANDING PAGE ***************************/
+.landing {
+	background-color:#2e2f33;
+
+}
+
+
+
+
+
+
+/*****************************************************************/
+
+
+
+
 /* probably use a flex box to display the playlist images. */
 .playlistDiv {
 	text-align:center;
@@ -13,6 +29,42 @@
 	height:100px;
 }
 
-iframe {
- 	opacity:.5;
+
+
+#sidePalyer {
+	cursor:pointer;
+}
+
+.sidenav {
+    display: none;
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
