Implement request for getting a users playlists, Give accesstoken to user object.

--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -17,7 +17,7 @@
   	<div>
   	<input></input>
   	<button class="search">Search Playlists</button>
-  	<button class="personalPlaylist"><a href ="/getUserPlaylists">Select one of your playlsits</a></button>
+  	<button class="personalPlaylist">Select one of your playlsits</button>
   	</div>
 	<span id="sidePlayer"> &#9776; open</span>
 	<div id="mySidenav" class="sidenav">
