--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -30,34 +30,24 @@
 	</div>
   	<div class="video">
   	<h1> Choose a scene </h1>
-  	<iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  <iframe id="player" type="text/html" width="640" height="390"
-  src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com"
-  frameborder="0"></iframe>
-  </div>
+  
+	<img class="scene" src="https://i.ytimg.com/vi/MY-f7whE_qE/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/4RUGmBxe65U/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/p91kHbSksW4/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/vGbRxR03jV8/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/5eLcHJLDlI8/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/f61PbjjVuF0/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/_gp51lt9kdA/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/V4Oosy-ZtGY/hqdefault.jpg"><img>
+	<img class="scene" src="https://i.ytimg.com/vi/hs86eBCT4dI/hqdefault.jpg"><img>
+
+
+ 	<!--  <script src="https://www.youtube.com/iframe_api"></script>
+  	<div id="player"></div>
+  	<div id="player1"></div>
+  	
+ 	 <button class="player-btn">Push</button> -->
+ 	 </div>
   </div>
 
 	<script src="main.js"></script>
