--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -15,7 +15,9 @@
   	</div>
   	</div>
   	<div class="instruction">
-  	</div>
+	<div id="player"></div>
+	<div id="cover"></div>
+	</div>
 	<h2>Search for a playlist</h2>
   	<input></input>
   	<button class="search">Search</button>
@@ -32,20 +34,20 @@
 	</div>
   	<div class="video">
   
-	<img class="scene" src="https://i.ytimg.com/vi/MY-f7whE_qE/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/4RUGmBxe65U/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/p91kHbSksW4/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/vGbRxR03jV8/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/5eLcHJLDlI8/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/f61PbjjVuF0/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/_gp51lt9kdA/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/V4Oosy-ZtGY/hqdefault.jpg"><img>
-	<img class="scene" src="https://i.ytimg.com/vi/hs86eBCT4dI/hqdefault.jpg"><img>
+	<img class="scene" id="MY-f7whE_qE" src="https://i.ytimg.com/vi/MY-f7whE_qE/hqdefault.jpg"><img>
+	<img class="scene" id="4RUGmBxe65U" src="https://i.ytimg.com/vi/4RUGmBxe65U/hqdefault.jpg"><img>
+	<img class="scene" id="p91kHbSksW4" src="https://i.ytimg.com/vi/p91kHbSksW4/hqdefault.jpg"><img>
+	<img class="scene" id="vGbRxR03jV8" src="https://i.ytimg.com/vi/vGbRxR03jV8/hqdefault.jpg"><img>
+	<img class="scene" id="5eLcHJLDlI8" src="https://i.ytimg.com/vi/5eLcHJLDlI8/hqdefault.jpg"><img>
+	<img class="scene" id="f61PbjjVuF0" src="https://i.ytimg.com/vi/f61PbjjVuF0/hqdefault.jpg"><img>
+	<img class="scene" id="_gp51lt9kdA" src="https://i.ytimg.com/vi/_gp51lt9kdA/hqdefault.jpg"><img>
+	<img class="scene" id="V4Oosy-ZtGY" src="https://i.ytimg.com/vi/V4Oosy-ZtGY/hqdefault.jpg"><img>
+	<img class="scene" id="hs86eBCT4dI" src="https://i.ytimg.com/vi/hs86eBCT4dI/hqdefault.jpg"><img>
 
  	 </div>
   </div>
   <footer> </footer>
-
 	<script src="main.js"></script>
+	<script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
