--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -36,7 +36,7 @@
 	</div>
   	<div class="video">
   
-	<img class="scene" id="p91kHbSksW4" src="https://i.ytimg.com/vi/p91kHbSksW4/hqdefault.jpg"><img>
+<!-- 	<img class="scene" id="p91kHbSksW4" src="https://i.ytimg.com/vi/p91kHbSksW4/hqdefault.jpg"><img>
 	<img class="scene" id="hs86eBCT4dI" src="https://i.ytimg.com/vi/hs86eBCT4dI/hqdefault.jpg"><img>
 	<img class="scene" id="4RUGmBxe65U" src="https://i.ytimg.com/vi/4RUGmBxe65U/hqdefault.jpg"><img>
 	<img class="scene" id="MY-f7whE_qE" src="https://i.ytimg.com/vi/MY-f7whE_qE/hqdefault.jpg"><img>
@@ -44,7 +44,7 @@
 	<img class="scene" id="5eLcHJLDlI8" src="https://i.ytimg.com/vi/5eLcHJLDlI8/hqdefault.jpg"><img>
 	<img class="scene" id="f61PbjjVuF0" src="https://i.ytimg.com/vi/f61PbjjVuF0/hqdefault.jpg"><img>
 	<img class="scene" id="V4Oosy-ZtGY" src="https://i.ytimg.com/vi/V4Oosy-ZtGY/hqdefault.jpg"><img>
-	<img class="scene" id="_gp51lt9kdA" src="https://i.ytimg.com/vi/_gp51lt9kdA/hqdefault.jpg"><img>
+	<img class="scene" id="_gp51lt9kdA" src="https://i.ytimg.com/vi/_gp51lt9kdA/hqdefault.jpg"><img> -->
 
  	 </div>
   </div>
