--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -24,7 +24,7 @@
 	<h2 class="search_playlist">Search for a playlist</h2>
   	<h2 class="your_playlsit">Show your playlists</h2> 
   	<h2 class="choose_scene"> Choose a scene </h2><br> 
-  	<input></input>
+  	<input class="search_spotify"></input>
   	<button class="search">Search</button>
   	<button class="personalPlaylist">Show</button>
 	<button class="youtube">Or Search Youtube</button>
@@ -34,6 +34,8 @@
   	<div class="modal-content">
    		 <span class="close">×</span>
     		<h1>Searh For Videos</h1>
+    		<input class="search_youtube"></input>
+    		<button class="search_youtube_button">Search</button>
   	</div>
 
 	</div>
