fix class name for playlist and video display

--- a/client/public/views/home.ejs
+++ b/client/public/views/home.ejs
@@ -49,7 +49,7 @@
 	</div>
 	
 	<!-- Videos and playlist display-->
-	<div class="test">
+	<div class="display">
 		<div class="playlists"></div>
   		<div class="video"></div>
  	</div>
