--- a/client/public/views/landing.ejs
+++ b/client/public/views/landing.ejs
@@ -6,9 +6,9 @@
 	<title>Set the Mood</title>
 </head>
 <body class="landing">
-<h1 class="landingTitle">Set the Mood</h1>
+<h1 class="landingTitle">Set the Mood With Spotify</h1>
+<h2 class="landingLogin"><a href ="/auth/spotify">Log in</a></h2>
 <hr/>
-<h2><a href ="/auth/spotify">Log in with spotify</a></h2>
 	
 </body>
 </html>
