--- a/client/public/views/landing.ejs
+++ b/client/public/views/landing.ejs
@@ -9,6 +9,6 @@
 <h1 class="landingTitle">Set the Mood With Spotify</h1>
 <h2 class="landingLogin"><a href ="/auth/spotify">Log in</a></h2>
 <hr/>
-	
+<img src="/spotifyLanding"/>
 </body>
 </html>
