--- a/client/public/views/landing.ejs
+++ b/client/public/views/landing.ejs
@@ -8,5 +8,11 @@
 <body class="landing">
 <h1 class="landingTitle">Set the Mood With Spotify</h1>
 <h2 class="landingLogin"><a href ="/auth/spotify">Log in</a></h2>
+<hr>
+<video width="450" autoplay loop>
+  <source src="/movie" type="video/mp4">
+  <source src="/movie" type="video/ogg">
+  Your browser does not support HTML5 video.
+</video>
 </body>
 </html>
