--- a/client/public/views/landing.ejs
+++ b/client/public/views/landing.ejs
@@ -9,10 +9,19 @@
 <h1 class="landingTitle">Set the Mood With Spotify</h1>
 <h2 class="landingLogin"><a href ="/auth/spotify">Log in</a></h2>
 <hr>
-<video width="450" autoplay loop>
+<video width="465" autoplay loop>
   <source src="/movie" type="video/mp4">
   <source src="/movie" type="video/ogg">
   Your browser does not support HTML5 video.
 </video>
+<div class="textLanding">
+	<h1>Welcome!</h1>
+	<p>Read below to set the mood like a pro ;) </p>
+	<p>First off, you must have a spotify installed on your computer to set the mood.</p>
+	<p>Search for any Spotify playlist or select one of your own.</p>
+	<p>Once you have a playlist jammin, click on a scene and press play.</p>
+	<p>Don't like any of the provided scenes? Search Youtube for the video of your choice.</p>
+	<p>Enjoy baby ........... (deep smooth sexy voice)</p>
+</div>
 </body>
 </html>
